# AgentLens_Splunk_Agentic_Ops_Hackathon

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
demo/wanderbot/: agents.py  attacks.py  langgraph_variant.py  main.py  tasks.py  tools.py
demo/wanderbot/data/: bookings.json  flights.json
docs/: architecture.md  attacks.md  splunk-setup.md
scripts/: package_splunk_app.py  seed_training_data.py  verify_hec.py
splunk_app/agentlens_app/: README.txt
splunk_app/agentlens_app/default/: app.conf  props.conf  savedsearches.conf  transforms.conf
splunk_app/agentlens_app/default/data/ui/nav/: default.xml
splunk_app/agentlens_app/default/data/ui/views/: agentlens_dashboard.xml
splunk_searches/: training_data.csv
src/agentlens/: __init__.py  config.py  conventions.py  exporter.py  instrumentor.py
