[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentlens"
version = "0.1.0"
description = "LLM observability for Splunk. One-line auto-instrumentation for CrewAI and LangGraph agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Shaik Mohammed Zakeer" }
]
keywords = ["llm", "observability", "splunk", "crewai", "langgraph", "opentelemetry"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "crewai",
    "crewai-tools",
    "langgraph",
    "langchain-core",
    "langchain-openai",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "openinference-instrumentation-crewai",
    "openinference-instrumentation-langchain",
    "openinference-instrumentation-openai",
    "openinference-semantic-conventions",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "splunk-sdk",
    "rich",
    "typer",
    "litellm",
]

[project.urls]
Homepage = "https://github.com/<placeholder>/agentlens"
Repository = "https://github.com/<placeholder>/agentlens"
Issues = "https://github.com/<placeholder>/agentlens/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentlens"]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
